--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../game v1.0/game-v1.html"
+export_path="../../godot-final/final.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
